syntax = "proto3";
package pb;
option go_package = "./pb";

enum MsgContentType {
  unknown = 0; // 未知类型
  typing = 1; // 正在输入
  tip = 2; // 提示

  text = 11; // 文本
  image = 12; // 图片
  audio = 13; // 语音
  video = 14; // 视频
  file = 15; // 文件
  location = 16; // 位置
  card = 17; // 名片
  merge = 18; // 合并
  emoji = 19; // 表情
  command = 20; // 命令
  richText = 21; // 富文本
  markdown = 22; // markdown

  custom = 100; // 自定义消息
}

enum NoticeContentType {
  unknownNotice = 0; // 未知类型

  hasRead = 1; // 已读
  hasEdited = 2; // 已编辑

  // command
  syncFriendList = 101; // 同步好友列表
  syncConvSetting = 102; // 同步会话设置

  // friend@
  updateUserInfo = 201; // 更新用户信息

  // group@
  groupMemberLeave = 301; // 群成员离开
  createGroup = 302; // 创建群
  newGroupMember = 303; // 新群成员
  dismissGroup = 304; // 解散群
  setGroupMemberInfo = 305; // 设置群成员信息
  setGroupInfo = 306; // 设置群信息
  recoverGroup = 307; // 恢复群
  updateGroupInfo = 308; // 更新群信息

  // groupMember
  applyToBeGroupMember = 401; // 申请加入群

  // friendMember
  applyToBeFriend = 501; // 申请加为好友
}
